--- a/style.css
+++ b/style.css
@@ -7,9 +7,30 @@ Version: 1.0.0
 */
 
 .wrapper {
-  width: 1100px;
-  max-width: 95%;
-  margin: 0 auto;
+  position: relative;
+  margin: calc(3 * 1rem) calc(10% + 60px);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+.wrapper form {
+  display: flex;
+  align-items: flex-end;
+}
+
+.wrapper form > * {
+  margin-right: 1em;
+}
+
+.wrapper form select,
+.wrapper form input[type='text'] {
+  background: #fff;
+  border: solid 1px #ccc;
+  border-radius: 0.25em;
+  box-sizing: border-box;
+  outline: none;
+  padding: 0.36rem 0.66rem;
+  height: 56px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif  
 }
 
 .wrapper ul {
@@ -18,6 +39,7 @@ Version: 1.0.0
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 0;
 }
 
 .wrapper ul li {
@@ -27,4 +49,56 @@ Version: 1.0.0
 .wrapper ul li img {
   float: left;
   margin: 0 1em 0 0;
+}
+
+.wrapper .post-meta  p {
+  margin: 0;
+}
+
+.wrapper nav a {
+  border: 1px solid;
+  width: 32px;
+  height: 32px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper nav a.active {
+  background: #0073aa;
+  color: #ffffff;
+  pointer-events: none;
+}
+
+.loading{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background: rgba(0,0,0, 0.5);
+  z-index: 99;  
+}
+.loading:after {
+  content: '';
+  display: block;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: rotate 1.2s linear infinite;
+}
+
+@keyframes rotate{
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% { 
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
