--- a/style.css
+++ b/style.css
@@ -46,13 +46,38 @@ Version: 1.0.0
   width: 48%;
 }
 
-.wrapper ul li img {
+.wrapper ul li .post-image {
   float: left;
   margin: 0 1em 0 0;
 }
 
 .wrapper .post-meta  p {
   margin: 0;
+  font-size: 0.8em;
+}
+
+.wrapper .post-image {
+  position: relative;
+  height: 150px;
+  width: 150px;
+}
+
+.wrapper .post-image:after {
+  content: '';
+  background: #0073aa;
+  mix-blend-mode: multiply;
+  opacity: 0.8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.wrapper .post-image img {
+  filter: grayscale(1);
+  z-index: 1;
 }
 
 .wrapper nav a {
@@ -66,6 +91,7 @@ Version: 1.0.0
 
 .wrapper nav a.active {
   background: #0073aa;
+  border-color: #0073aa;
   color: #ffffff;
   pointer-events: none;
 }
